--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-parallax-tilt": "^1.7.299",
     "react-router": "^7.6.3",
     "react-router-dom": "^7.6.3",
+    "react-scroll": "^1.9.3",
     "react-tippy": "^1.4.0",
     "react-tooltip": "^5.29.1",
     "react-type-animation": "^3.2.0",
